--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@fontsource/lato": "^4.2.0",
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.5",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "tailwindcss-cli": "^0.1.2"
   }
 }
